# utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
choice_manager/: CMakeLists.txt  choice_manager_api.h
choice_manager/src/: choice_manager.cpp  choice_manager.hpp  choice_manager_api.cpp  choice_manager_tests.cpp
common/: CMakeLists.txt  defines.hpp  defines_api.h  guid.hpp  id.hpp
common/src/: utils_tests.cpp
dialogue_editor/: DialogueEditor.sln
dialogue_editor/DialogueEditor/: Arrow.cs  ChoiceModel.cs  CommandExecutor.cs  ConnectionViewModel.cs  ConnectorViewModel.cs  DialogueEditor.csproj  DialogueModel.cs  HandlesPropertyChanged.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  NetworkViewModel.cs  NodeViewModel.cs  ParticipantViewModel.cs  TextInputDialog.xaml  TextInputDialog.xaml.cs  packages.config
dialogue_editor/DialogueEditor/Properties/: AssemblyInfo.cs
dialogue_editor/DialogueManager/: ChoiceManager.cs  DialogueManager.cs  DialogueManagerCS.csproj
dialogue_editor/DialogueManagerTests/: ChoiceManagerTest.cs  ChoiceTest.cs  DialogueChoiceTest.cs  DialogueEntryTest.cs  DialogueManagerTest.cs  DialogueManagerTests.csproj  DialogueTest.cs  GuidTest.cs  ParticipantTest.cs
dialogue_editor/DialogueManagerTests/Properties/: AssemblyInfo.cs
dialogue_manager/: CMakeLists.txt  dialogue_manager.hpp  dialogue_manager_api.h
dialogue_manager/src/: dialogue_manager.cpp  dialogue_manager.hpp  dialogue_manager_api.cpp  dialogue_manager_tests.cpp
